# dj-photon-codecs

./: README.md  mkdocs.yml  pyproject.toml
docs/: contributing.md  index.md
docs/api/: reference.md
docs/examples/: calcium-imaging.md  low-light.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/user-guide/: anscombe-transform.md  best-practices.md  compression.md  overview.md  storage-structure.md
src/dj_photon_codecs/: __init__.py  codecs.py
